# FloodSense

./: .breakpoints  code.ino  details.txt  pyproject.toml  replit_zip_error_log.txt  requirements.txt  runModel.py  trainmodel.py
.upm/: store.json
django_project/: settings.py  urls.py
floodsenseapp/: admin.py  apps.py  feature_names.pkl  models.py  urls.py  views.py
floodsenseapp/migrations/: 0001_initial.py  0002_imgdata.py  0003_chatdata_feedbackdata.py  0004_chatdata_role.py  0005_reportedfloodalertdata.py  0006_faqdata.py  0007_sensordata_latitude_sensordata_longitude.py
floodsenseapp/templates/floodsenseapp/: base.html  chat.html  contact.html  faq.html  feedback.html  feedbackform.html  home.html  login.html  register.html  reportedalert.html  welcome.html
